# hardware-aware-router

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  TRAINING_BENCHMARK.md  hardware_cost_preproc.joblib  hardware_signals_to_be_fetched  pyproject.toml  qwen_metrics.txt  tinyllama_metrics.txt  vllm_metrics.txt
analysis/: analyze_token_weighted.py  evaluate_cost_model.py  motivation_sweep.py  router_latency_test.py
configs/: gpu_model_map.yaml  gpu_model_map_2.yaml  gpu_model_map_4_models.yaml  gpu_model_map_h100.yaml  gpu_model_map_qwen.yaml  l4_test.yaml  lab_test.yaml  phi3_mini_qwen14b.yaml
data/: dataset_phi3_mini_qwen14b_test.csv  evaluation_dataset_processed_full_with_umr_irt.csv  hw_dataset.csv  hw_dataset_highload.csv  hw_dataset_newton.csv  hw_dataset_newton_h100.csv  hw_dataset_qween.csv  hw_dataset_qween_4_test.csv  hw_dataset_qwen_sweep.csv  hw_dataset_qwen_sweep_test_10.csv  hw_dataset_test_again.csv  l4_test_run.csv  lab_tinyllama_test.csv  lambda_sweep_results_final_with_irt_umr.csv  metrics_qwen3b.csv  probes_embedllm-512.json  run_manifest.jsonl
docker/: Dockerfile
docs/: JUDGE_QUALITY_SCORING.md  QWEN3_NEXT_GUIDE.md  README_SCORING.md  SLO_FORMULATION.md  TRAINING_BENCHMARK.md
hardware_cost_scripts/: collect_hardware_signals.sh  final_llm_pool_loading_in_vllm.sh  hardware_eval.sh  launch_all_models_vllm.sh  run_sweep_for_all_request_patterns.sh  start_vllm.sh
hw_router/: model_registry.py  routers.py
pipeline/: README.md
plots/: Queue.csv
scripts/: JUDGE_SCORING.md  QWEN3_NEXT_GUIDE.md  SCORING_EXAMPLES.md  extract.py  get_scores.py  (+2 more)
(+109 files in other folders)
