

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "router"
version = "0.1.0"
description = "Hardware Cost Aware LLM Routing"
authors = [
    { name = "Ahasan Kabir", email = "ahasankabir146@gmail.com" }
]
dependencies = [
    "transformers",
    "accelerate",
    "datasets",
    "faiss-cpu",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "torch",
    "tqdm",
    "hydra-core",
    "vllm",
    "fastapi",
    "uvicorn",
    "prometheus-client",
    "pandas",
    "numpy",
    "httpx",
    "pyyaml",
    "openai",
    "sentence-transformers"
]

[project.scripts]
generate-probes = "scripts.generate_probes:main"
compute-descriptors = "scripts.compute_descriptors:main"
sanity-check = "scripts.sanity_check_descriptors:main"
